--- a/chendian/chendian/settings_dev.py.sample
+++ b/chendian/chendian/settings_dev.py.sample
@@ -76,6 +76,10 @@ LOGGING = {
             'handlers': ['console'],
             'level': 'DEBUG',
         },
+        'blog': {
+            'handlers': ['console'],
+            'level': 'DEBUG',
+        },
     }
 }
 
