--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,7 @@ settings_dev.py
 data.txt
 .module-cache
 chendian/static/js/frontend/*
+chendian/static/css/frontend/*
 *.sql
 *.tar.gz
 node_modules/
