--- a/chendian/chendian/settings_dev.py.sample
+++ b/chendian/chendian/settings_dev.py.sample
@@ -13,11 +13,21 @@ TEMPLATES = [
     {
         'BACKEND': 'django.template.backends.django.DjangoTemplates',
         'APP_DIRS': True,
-        'DIRS': os.path.join(BASE_DIR, 'templates'),
+        'DIRS': [os.path.join(BASE_DIR, 'templates')],
         'OPTIONS': {
             'debug': True,
-        }
-    },
+            'context_processors': (
+                "django.contrib.auth.context_processors.auth",
+                "django.core.context_processors.request",
+                "django.core.context_processors.debug",
+                "django.core.context_processors.i18n",
+                "django.core.context_processors.media",
+                "django.core.context_processors.static",
+                "django.core.context_processors.tz",
+                "django.template.context_processors.debug",
+            ),
+        },
+    }
 ]
 
 
