--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -1,13 +1,15 @@
 Django==1.8.4
-times
-pytz
+times==0.7
+pytz==2014.10
 djangorestframework==3.2.2
-django-filter
-django-rq
-pyexcel_xlsx
-qiniu
-pypinyin>=0.8.1
-xmltodict
-markupsafe
-django-cache-machine
-python-memcached
+django-filter==0.9.2
+django-rq==0.7.0
+pyexcel_xlsx==0.0.5
+qiniu==7.0.3
+pypinyin==0.9.1
+xmltodict==0.9.2
+MarkupSafe==0.23
+django-cache-machine==0.9
+python-memcached==1.57
+python-magic==0.4.10
+requests==2.8.1
