--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -2,6 +2,7 @@ Django==1.8.4
 django-cache-machine==0.9
 django-filter==0.9.2
 django-rq==0.7.0
+django-watson==1.1.9
 djangorestframework==3.2.2
 MarkupSafe==0.23
 pyexcel_xlsx==0.0.5
