remove 'rest_framework.renderers.BrowsableAPIRenderer'
from default settings

--- a/chendian/chendian/settings_dev.py.sample
+++ b/chendian/chendian/settings_dev.py.sample
@@ -147,3 +147,8 @@ CACHES['debug-panel'] = {
         'MAX_ENTRIES': 200
     }
 }
+
+REST_FRAMEWORK['DEFAULT_RENDERER_CLASSES'] = (
+    'rest_framework.renderers.JSONRenderer',
+    'rest_framework.renderers.BrowsableAPIRenderer',
+)
