--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-rev": "~5.1.0",
     "gulp-sass": "~2.0.4",
     "gulp-util": "~3.0.6",
-    "react": "~0.13.3"
+    "react": "~15.0.2",
+    "react-dom": "~15.0.2"
   }
 }
