--- a/chendian/static/libs/bower.json
+++ b/chendian/static/libs/bower.json
@@ -26,7 +26,7 @@
     "x-editable": "~1.5.1",
     "lazysizes": "~1.3.1",
     "dropzone": "~4.2.0",
-    "datetimepicker": "~2.4.5",
+    "datetimepicker": "2.4.5",
     "xss": "~0.2.7",
     "bootstrap-fileinput": "~4.2.7",
     "webui-popover": "~1.2.5",
