add 2016 年我读过的书

--- a/.gitignore
+++ b/.gitignore
@@ -61,8 +61,8 @@ settings_product.py
 settings_dev.py
 data.txt
 .module-cache
-chendian/static/js/frontend/*
-chendian/static/css/frontend/*
+# chendian/static/js/frontend/*
+# chendian/static/css/frontend/*
 *.sql
 *.tar.gz
 node_modules/
